# bandu

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  app.py  config.toml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  start_app.sh  test_app.py  test_megamind.py
.chainlit/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
agents/: __init__.py  agents.py  basic_agent.py  influencer_agent.py  manipulation_agent.py  mcp_adapter.py  navigation_agent.py  perception_agent.py  response.py  tools.py
configure_llms/: index.html
docker/: Dockerfile
docs/: configure_llms.md  index.md  installation.md  presentation.md
embodiments/: basic_embodiment.json  manipulation_embodiment.json  navigation_embodiment.json  perception_embodiment.json  supervisor_embodiment.json
installation/: index.html
scripts/: app.py
search/: search_index.json
src/bandu/a2a_agents/: cards.py  skills.py
src/bandu/a2a_agents/manipulation_agent/: __main__.py  agent.py  agent_executor.py
src/bandu/a2a_agents/navigation_agent/: __main__.py  agent_executor.py
src/bandu/agents/: __init__.py  agents.py  basic_agent.py  influencer_agent.py  manipulation_agent.py  mcp_adapter.py  navigation_agent.py  perception_agent.py  supervisor_agent.py  tools.py
src/bandu/app/: __init__.py  app.py
src/bandu/rag/: locations.py  rag_client.py
tests/: test_a2a_agents.py  test_chroma_db.py
usage/: index.html
