[project]
name = "bandu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.6",
    "langchain-chroma>=0.1.2",
    "langchain-core>=0.3.83",
    "langchain-mcp-adapters>=0.2.0",
    "langgraph>=1.0.1",
    "posthog>=7.6.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "rai-core>=2.6.0",
    "rai-whoami>=0.0.5",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
