[project]
name = "bandu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.6",
    "google-adk[a2a]>=1.14.1",
    "langchain-chroma>=0.1.2",
    "langchain-core>=0.3.83",
    "langchain-mcp-adapters>=0.2.0",
    "langgraph>=1.0.1",
    "posthog>=7.6.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "rai-core>=2.6.0",
    "rai-whoami>=0.0.5",
]

[project.scripts]
start_navigation_agent = "bandu.a2a_agents.navigation_agent.__main__:main"
start_manipulation_agent = "bandu.a2a_agents.manipulation_agent.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
]
